--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 </head>
-<link rel="style.css" href="/css/master.css">
+<link rel="css/style.css" href="">
 <body style="background-color:#fdbaf8;">
   <hr size='8' noshade=0>
   <h1>Gaurav Mishra</h1>
@@ -29,4 +29,4 @@
 <h3>Education Background</h3>
 <p>2007 passed with VJhs</p>
 
-<h3><a href="E:\web development\html\contact.html">Contact me</a></h3>
+<h3><a href="E:\web development\contact.html">Contact me</a></h3>
