--- a/index.html
+++ b/index.html
@@ -29,4 +29,4 @@
 <h3>Education Background</h3>
 <p>2007 passed with VJhs</p>
 
-<h3><a href="https://github.com/gmishra19/bio/blob/master/contactme.html">Contact me</a></h3>
+<h3><a href="https://github.com/gmishra19/bio/blob/master/contactme.css">Contact me</a></h3>
